# tinycorp-meetings

./: .gitignore  2025-06-09.json  README.md  fix-typo-prompt.txt  github_pr_report.py  github_scraper.py  meeting-transcript.md  meeting.py  process_audio.py  pyproject.toml  requirements.txt  speakers.py  test_llm.py  test_meeting.py  update_speaker.py
2024-11-11/: README.md  transcript.md
2024-11-18/: README.md
2024-11-25/: README.md
2024-12-02/: README.md
2024-12-09/: README.md
2024-12-16/: README.md
2024-12-23/: README.md
2024-12-30/: README.md
2025-01-13/: README.md
2025-01-20/: README.md
2025-01-27/: README.md
2025-02-03/: README.md
2025-02-10/: README.md
2025-02-17/: README.md
2025-02-24/: README.md
2025-03-03/: README.md
2025-03-24/: README.md
2025-03-31/: README.md
2025-04-07/: README.md
2025-04-14/: README.md
2025-04-21/: README.md
2025-04-28/: README.md
2025-05-05/: README.md
last-week-in-tinycorp/2024-11-11/: meeting-transcript.md
last-week-in-tinycorp/2024-11-18/: meeting-transcript.md
last-week-in-tinycorp/2024-11-25/: meeting-transcript.md
last-week-in-tinycorp/2024-12-02/: meeting-transcript.md
last-week-in-tinycorp/2024-12-09/: meeting-transcript.md
last-week-in-tinycorp/2024-12-16/: meeting-transcript.md
last-week-in-tinycorp/2024-12-23/: meeting-transcript.md
last-week-in-tinycorp/2024-12-30/: meeting-transcript.md
src/: github.py  llm_client.py  meeting_pipeline.py  parse_transcript_json.py  record.py  run_transcription.py  twitter_scraper.py  upload_youtube.py
weekly_logs/: run.py
(+110 files in other folders)
